[package]
name = "test_dvfs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
array-macro = "2.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dependencies.awkernel_async_lib]
path = "../../../awkernel_async_lib"
default-features = false

[dependencies.awkernel_lib]
path = "../../../awkernel_lib"
default-features = false
