[package]
name = "test_nvme"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

[dependencies.awkernel_async_lib]
path = "../../../awkernel_async_lib"
default-features = false

[dependencies.awkernel_lib]
path = "../../../awkernel_lib"
default-features = false

[dependencies.awkernel_drivers]
path = "../../../awkernel_drivers"
default-features = false
features = ["pcie"]