[package]
name = "test_nvme_fatfs_rw"
version = "0.1.0"
edition = "2021"

[dependencies]
awkernel_lib = { path = "../../../awkernel_lib" }
awkernel_async_lib = { path = "../../../awkernel_async_lib" }
log = "0.4"
futures = { version = "0.3", default-features = false }

[lib]
name = "test_nvme_fatfs_rw"
path = "src/lib.rs"